Add OpenUV forecast endpoint
